# EnderBot-v1.1-1

./: .heroku  README.md  backup.txt  help.json  keep_alive.py  main.py  pyproject.toml  requirement.txt  tools.py
cogs/: MCServ.py  Random.py  Unsplash.py  covid.py  debug.py  games.py  media.py  misc.py  music.py  translate.py  weather.py
func/: hypFunc.py  mojang.py  options.py
games/: hangman.py
utils/: codes.py  required_data.json
zMatbotlib config/: fontlist-v330.json
