[tool.poetry]
name = "enderbot-v11-1"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
googletrans = "^3.0.0"
modules = "^1.0.0"
replit = "^3.0.0"
aiohttp = "^3.7.4"
psutil = "^5.8.0"
speedtest-cli = "^2.1.3"
pafy = "^0.5.5"
mcstatus = "^5.1.4"
xkcd = "^2.4.2"
discord = "^1.0.1"
ksoftapi = "^0.4.1"
youtube_dl = "^2021.4.26"
PyNaCl = "^1.4.0"
lyricwikia = "^0.1.11"
jokeapi = "^0.2.11"
pandas = "^1.2.4"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
